# NetGauze

./: Cargo.toml  Dockerfile  Dockerfile-debian  IEs.md  TODOs.md  docker-compose.yml  netgauze-ipfix-testing.md
.github/workflows/: ci.yml
crates/analytics/: Cargo.toml
crates/analytics/src/: main.rs
crates/bmp-service/: Cargo.toml  Dockerfile  docker-build.sh  docker-compose.yml  docker-entrypoint.sh
crates/bmp-service/examples/: print-bmp.rs
crates/collector/: 1-example-enriched-native.json  1-example-enriched-transformed.json  2-example-enriched-native.json  2-example-enriched-transformed.json  3-example-enriched-native.json  3-example-enriched-transformed.json  Cargo.toml  config.yaml  config_udpnotif_telemetry.yaml  config_vmware_dev.yaml
crates/collector/src/: config.rs  http.rs  lib.rs  main.rs
crates/flow-pkt/: Cargo.toml  build.rs  build_backup.rs  flow-nokia-test.pcap  flow-subregs-test.pcap  flow-test.pcap  flow-vmware-test.pcap  internals-flow-test.pcap  netflowv9-subregs-test.pcap
crates/flow-pkt/examples/: ipfix-netgauze-pcap.rs  ipfix-nokia-pen-pcap.rs  ipfix-nokia-pen.rs  ipfix-subregs-pcap.rs  ipfix-vmware-pcap.rs  ipfix.rs  netflow-subregs-pcap.rs
crates/flow-pkt/registry/: cisco.xml  huawei.xml  netgauze.xml  (+1 more)
crates/flow-service/: Cargo.toml
crates/ipfix-code-generator/: tmp_checking_name_registries.txt  tmp_protocol_numbers_check.txt
crates/load-gen/: .gitignore  Cargo.toml  target_debug
crates/load-gen/src/: main.rs
docker/: Dockerfile  build.sh  docker-entrypoint.sh
docker/example/: config.yml  docker-compose.yml
(+52 files in other folders)
