[package]
name = "load-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
netgauze-flow-pkt = {version = "0.5.0", git = "https://github.com/NetGauze/NetGauze.git", features = ["default", "codec"]}
chrono = { version = "0.4" }
serde_json = { version = "1"}
clap = { version = "4.5", features = ["derive"] }
rand = { version = "0.8" }
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
tracing = { version = "0.1" }
tracing-subscriber = {version = "0.3"}
anyhow = "1"
bytes = {version = "1.7"}
futures-util = {version = "0.3", features = ["tokio-io", "sink", "futures-sink"]}
async-channel = "2.3"
rdkafka = "0.36"
serde = {version = "1"}